kustomize/overlays/docker-server/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: argocd
  name: argocd-pathprefix
spec:
  addPrefix:
    prefix: /argocd
