kustomize/overlays/docker-server/argocd-server-service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: argocd
  name: argocd-server
spec:
  type: LoadBalancer
